2002-09-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/molecule-hacking.ly: also restore Y
	extent. Fixes bugs with stem attachment of parenthesized note
	heads.

2002-09-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/clef-end-of-line.ly: new file.

	* lily/stem-engraver.cc (acknowledge_grob): warn about too long
	tremolos. Thanks to Erik Sandberg

	* input/trip.ly (fugaIIPedal): small cleanups.

	* lily/grob-pq-engraver.cc: more helpful message.
	(stop_translation_timestep): use scm_merge_x for merging the lists.

	* Documentation/user/appendices.itely: switch off parmesan listing

2002-09-01  Juergen Reuter  <reuter@ipd.uka.de>

	* input/test/ancient-font.ly, input/test/ancient-time.ly,
	  input/test/mensural-ligatures.ly, lily/ligature-head.cc,
	  lily/mensural-ligature-engraver.cc, lily/note-head.cc,
	  lily/time-signature.cc, scm/output-lib.scm: removed obsolete
	  code that sets grob property font-family; also small updates to
	  various input/test files.

2002-09-01  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/tab-staff.ly: removed.
	
	* lily/paper-def.cc (find_font): load virtual font for a list of
	font names.

	* scm/font.scm (paper20-style-sheet-alist): equate ancient and
	music font-families.

	* lily/virtual-font-metric.cc (get_char_molecule): new function

	* lily/system-start-delimiter.cc (staff_brace): use virtual fonts
	for the list of braces

	* lily/font-metric.cc (get_char_molecule): new function.

2002-08-31  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/virtual-font-metric.cc: new file

	* lily/include/virtual-font-metric.hh (class Virtual_font_metric):
	new file

	* scripts/lilypond-book.py: use old re's for python 2.2 as well

	* debian/control: Debian patches by Anthony Fok

	* input/regression/lyric-combine-polyphonic.ly: new file.

	* ly/engraver-init.ly (VoiceContext): add Grob_pq_engraver to
	Voice context.

2002-08-31 Graham Percival  <gperciva@sfu.ca>
